# openrelik-worker-parser

./: Dockerfile  README.md  pyproject.toml
src/: app.py  elf_task.py  factory.py  macho_task.py
src/parsers/: elf_parser.py  macho_parser.py
src/parsers/hashers/: entropy.py  interface.py  manager.py  md5.py  sha1.py  sha256.py
